; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_find_next_cap_method.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci.c_pci_find_next_cap_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCICAP_ID = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"start capability is not expected capability\00", align 1
@PCICAP_NEXTPTR = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pci_find_next_cap_method(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* %10, align 4
  %15 = sext i32 %14 to i64
  %16 = load i64, i64* @PCICAP_ID, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @pci_read_config(i32 %13, i64 %17, i32 1)
  %19 = load i32, i32* %9, align 4
  %20 = icmp eq i32 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @KASSERT(i32 %21, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %10, align 4
  %25 = sext i32 %24 to i64
  %26 = load i64, i64* @PCICAP_NEXTPTR, align 8
  %27 = add nsw i64 %25, %26
  %28 = call i32 @pci_read_config(i32 %23, i64 %27, i32 1)
  store i32 %28, i32* %12, align 4
  br label %29

29:                                               ; preds = %48, %5
  %30 = load i32, i32* %12, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %55

32:                                               ; preds = %29
  %33 = load i32, i32* %8, align 4
  %34 = load i32, i32* %12, align 4
  %35 = sext i32 %34 to i64
  %36 = load i64, i64* @PCICAP_ID, align 8
  %37 = add nsw i64 %35, %36
  %38 = call i32 @pci_read_config(i32 %33, i64 %37, i32 1)
  %39 = load i32, i32* %9, align 4
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %41, label %48

41:                                               ; preds = %32
  %42 = load i32*, i32** %11, align 8
  %43 = icmp ne i32* %42, null
  br i1 %43, label %44, label %47

44:                                               ; preds = %41
  %45 = load i32, i32* %12, align 4
  %46 = load i32*, i32** %11, align 8
  store i32 %45, i32* %46, align 4
  br label %47

47:                                               ; preds = %44, %41
  store i32 0, i32* %6, align 4
  br label %57

48:                                               ; preds = %32
  %49 = load i32, i32* %8, align 4
  %50 = load i32, i32* %12, align 4
  %51 = sext i32 %50 to i64
  %52 = load i64, i64* @PCICAP_NEXTPTR, align 8
  %53 = add nsw i64 %51, %52
  %54 = call i32 @pci_read_config(i32 %49, i64 %53, i32 1)
  store i32 %54, i32* %12, align 4
  br label %29

55:                                               ; preds = %29
  %56 = load i32, i32* @ENOENT, align 4
  store i32 %56, i32* %6, align 4
  br label %57

57:                                               ; preds = %55, %47
  %58 = load i32, i32* %6, align 4
  ret i32 %58
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @pci_read_config(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
